--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "private": true,
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.7.1",
+    "axios": "^0.18.0",
     "connected-react-router": "^4.5.0",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
