done Technical task

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@material-ui/core": "^3.7.1",
     "axios": "^0.18.0",
     "connected-react-router": "^4.5.0",
+    "currency-flags": "git+https://github.com/transferwise/currency-flags.git",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.6.0",
@@ -54,6 +55,7 @@
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-select": "1.2.1",
+    "recharts": "^1.4.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-form": "^7.4.2",
